[package]
name = "opensea-ws-client-rs"
description = "Client for receiving updates from the OpenSea Stream API over websockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wanderers-nft/opensea-stream-rs"
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]
keywords = ["opensea", "stream", "nft"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

phyllo = "0.3.0"
tokio = { version = "1.40", features = ["sync"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
eyre = "0.6"
tokio = { version = "1.40", features = ["full"] }

[features]
default = ["rustls-tls-native-roots"]
rustls-tls-native-roots = ["phyllo/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["phyllo/rustls-tls-webpki-roots"]
